# vs_cmake_template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vs_cmake_template.cpp  vs_cmake_template.h
.github/workflows/: cmake-single-platform.yml
lib/: CMakeLists.txt
lib/src/: vs_cmake_template_lib.cpp
lib/tests/: CMakeLists.txt  vs_cmake_template_test.cpp
src/: vs_cmake_template.cpp
